Glide overlay arrows offset adjustement. Linked skull logo to about section. Form button styling. Cart bottom padding adjustement on phone screen to avoid logo overlapping with check out link.

--- a/resources/css/glide.theme.css
+++ b/resources/css/glide.theme.css
@@ -31,11 +31,11 @@
 }
 
 .glide__arrow2--left {
-	cursor: url(/img/cursors/left.png), w-resize;
+	cursor: url(/img/cursors/left.png) 0 24, w-resize;
 }
 
 .glide__arrow2--right {
-	cursor: url(/img/cursors/right.png), e-resize;
+	cursor: url(/img/cursors/right.png) 14 24, e-resize;
 	right: 0;
 }
 
